--- a/snaked/core/quick_open/gui.glade
+++ b/snaked/core/quick_open/gui.glade
@@ -53,6 +53,7 @@
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
                 <signal name="changed" handler="on_search_entry_changed" swapped="no"/>
+                <signal name="key-press-event" handler="on_search_entry_key" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
